[metadata]
name = bin
version = file:VERSION
description = A simple pastebin
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/readthedocs-fr/bin
download_url = https://pypi.drlazor.be/bin/
license = MIT
classifiers =
  Environment :: No Input/Output (Daemon)
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only

[options]
install_requires =
  bottle
  genpw
  python-dotenv
  redis
  # waiting for pip/setuptools to support custom package indexes:
  # pip install -i https://pypi.drlazor.be metrics
