[metadata]
name = rtd-bin-server
version = file:VERSION
description = A pastebin for Read The Docs discord community
author = Read The Docs
author-email = opensource@readthedocs.fr
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/readthedocs-fr/bin-server
license = MIT
classifiers =
  Environment :: No Input/Output (Daemon)
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only

[options]
packages = bin
install_requires =
  bottle
  genpw
  Pygments
  python-dotenv
  redis
  jmetrics

[options.package_data]
* = assets/**/*, views/*
